--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves">0</span> Moves
 
-            <div class="restart">
+          <span class="timer">0</span> Time
+
+          <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
