Added Modal for finished game notification
Working on the css coloring, and js html pass through for the message.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
         </ul>
     </div>
 
+    <div class= "modal">
+      <div class="winning-game">
+        <h2 class= "winning-game-message"></h2>
+        <span class="final-star-count"></span>
+        <div class= "final-time-and-moves">
+          Time : <span class="final-time-count"></span>
+          Moves : <span class="final-move-count"></span>
+        </div>
+        <button class="replayButton">New game?</button>
+        <button class="close">Close</button>
+      </div>
+    </div>
+
     <script src="js/app.js"></script>
 </body>
 </html>
