Updated logic for timer, move, and new game
Game restarts now and so does the timer and move counter

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">0</span> Moves
+        	<span class="moves"></span> Moves
 
-          <span class="timer">0</span> Time
+          <span class="timer"></span> Time
 
           <div class="restart">
         		<i class="fa fa-repeat"></i>
